@@ -3,7 +3,6 @@
 COPYING
 LICENSE
 MANIFEST.in
-reahl
 tox.ini
 reahl/__init__.py
 reahl/dev/__init__.py
